fix the third image not showing by adding {} for n = 0; ...

--- a/sample/css/index9-modal.css
+++ b/sample/css/index9-modal.css
@@ -11,7 +11,7 @@ a {text-decoration: none; color: inherit}
 #modal-wrap > div {display: table-cell; text-align: center; vertical-align: middle; background-color: rgba(0,0,0,0.3);}
 #modal-content {width: 300px; height: 200px; margin: 0 auto; position: relative;}
 
-.banner {width: 200px; height: 50px; overflow: hidden;}
+.banner {width: 200px; height: 50px; border-radius: 100%; overflow: hidden;}
 .slide {width: 600px; height: 50px; position: relative;}
 .slide li {float: left;}
 .slide img {width: 200px; height: 50px;}
